--- a/style.css
+++ b/style.css
@@ -21,17 +21,21 @@ body {
     font-size: 18px;
 }
 
-.header .fecha{
+.header .data{
     width: 30vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: "Glory", serif; 
+    font-weight: 100;
+    gap: 5px;
 }
-.header .fecha i{
-    margin-left: 15px;
+.header .data .ico{
+    margin-left: 7px;
+    margin-right: 7px;
     color: #1E3A59;
 }
-.header .fecha p{
+.header .tada p{
     font-weight: lighter;
     margin-left: 15px;
 }
@@ -88,8 +92,11 @@ nav{
     position: fixed;
     top: 45%;
     right: 30px;
-     cursor: url('./img/mano.png'), auto;
+    cursor: url('./img/mano.png'), auto;
     transform: rotate(-45deg);
+    animation: backInRight;
+    animation-duration: 1s;
+    transition: all 1s;
 }
 
 nav .nav-content{
@@ -211,12 +218,11 @@ h2 {
   
 .box div {
     position: absolute;
-    width: 5vw;
-    height: 5vw;
+    width: 4vw;
+    height: 4vw;
     background: transparent;
     border: 4px solid black;
     rotate: 45deg;
-    animation: animate 10s linear infinite;
 }
   
 .box div:nth-child(1){
@@ -238,16 +244,50 @@ h2 {
     animation: animate 10s linear infinite;
 }
 .box div:nth-child(4){
-    top: 65%;
+    top: 68%;
     left: 32%;
     scale: 50%;
     animation: animate 10s linear infinite;
 }
+
+.box div:nth-child(5){
+    top: 55%;
+    left: 22%;
+    width: 3vw;
+    height: 1px;
+    background: black;
+    border: 1px solid black;
+    transform: rotate(80deg);
+}
+
+.box div:nth-child(6){
+    bottom: 15%;
+    left: 50%;
+    width: 5vw;
+    height: 1px;
+    background: black;
+    border: 1px solid black;
+    transform: rotate(120deg);
+}
+
+.box div:nth-child(7){
+    top: 27%;
+    right: 10%;
+    width: 4.2vw;
+    height: 1px;
+    background: black;
+    border: 1px solid black;
+    transform: rotate(20deg);
+}
+
   
 @keyframes animate {
     0% {
       transform: scale(0) translateY(0) rotate(0);
       opacity: 1;
+    }
+    75%{
+        opacity: 1;
     }
     100% {
       transform: scale(1.3) translateY(-3px) rotate(360deg);
@@ -1234,7 +1274,7 @@ h2 {
 }
 
 @media (max-width: 935px){
-    .header .fecha,
+    .header .data,
     .header .busqueda{
         opacity: 0;
     }
