--- a/css/biblioteca.css
+++ b/css/biblioteca.css
@@ -10,28 +10,35 @@ body {
 /*Header*/
 
 .header{
-    z-index: 2;
+    z-index: 10;
     background: #EAECEE;
-    width: 100vw;
+    width: 100%;
     font-family: "Glory", serif; 
     display: flex;
     align-items: center;
     justify-content: space-around;
     position: fixed;
     font-size: 18px;
+    top: 0;
+    right: 0;
+    left: 0;
 }
 
-.header .fecha{
+.header .data{
     width: 30vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: "Glory", serif; 
+    font-weight: 100;
+    gap: 5px;
 }
-.header .fecha i{
-    margin-left: 15px;
+.header .data .ico{
+    margin-left: 7px;
+    margin-right: 7px;
     color: #1E3A59;
 }
-.header .fecha p{
+.header .tada p{
     font-weight: lighter;
     margin-left: 15px;
 }
@@ -77,91 +84,202 @@ body {
     justify-content: center;
     color: #1E3A59;
 }
-.header .busqueda p{
+
+.header .busqueda button{
+    cursor: url('../img/mano.png'), auto;
+}
+
+.header .busqueda .header-toggle{
     margin-left: 10px;
-    font-weight: lighter;
+    font-size: 1.5rem;
+    border: none;
+}
+
+.sidebar{
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 100;
+    width: 228px;
+    background: #EAECEE;
+    box-shadow: 2px 0px 24px black;
+    padding-block: 1.5rem;
+    transition: left .4s, background-color .4s, width 0.4s;
+    font-family: 'Glory', serif;
+}
+
+.sidebar-information h3{
+    font-size: 20px;
+}
+
+.sidebar-container,
+.sidebar-content{
+    display: flex;
+    flex-direction: column;
+    row-gap: 3rem;
+}
+
+.sidebar-container{
+    height: 100%;
+    overflow: hidden;
 }
 /*Navbar*/
 
-nav{
-    z-index: 100;
-    position: fixed;
-    top: 45%;
-    right: 30px;
-    cursor: url('../img/mano.png'), auto;
-    transform: rotate(-45deg);
-    animation: backInRight;
-    animation-duration: 1s;
-    transition: all 1s;
-}
 
-nav .nav-content{
-    display: flex;
+/*Bienvenida*/
+
+.bienvenida{
+    width: 100%;
+    height: 100vh;
     align-items: center;
-    justify-content: center;
-}
-
-.nav-content .toggle-btn,
-.nav-content span a{
-    height: 60px;
-    width: 60px;
     display: flex;
-    align-items: center;
     justify-content: center;
-    border-radius: 50%;
-    transition: all 1s;
-    cursor: url('../img/mano.png'), auto;
+    flex-direction: column;
 }
 
-.nav-content .toggle-btn{
+.bienvenida h1{
+    font-family: "Hammersmith One", serif;
+    font-size: 72px;
+    margin: 0;
+    text-align: center;
+}
+
+.bienvenida h3{
+    margin: 0;
+    font-family: "Hammersmith One", serif;
+    font-size: 32px;
+    font-weight: 200;
+    text-align: center;
+    color: #7d839c;
+}
+
+
+/*Footer*/
+
+.footer{
+    text-align: center;
+    width: 100%;
+    font-family: "Glory", serif; 
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #212329;
+    min-height: 100px;
+    box-shadow: 0px -9px 10px rgba(0, 0, 0, 0.5);
+}
+
+.pie{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 60px;
+}
+
+.social i{
+    color: #3a3e49;
     font-size: 30px;
-    z-index: 101;
-    cursor: url('../img/mano.png'), auto;
-    transform: rotate(45deg);
-    background: linear-gradient(to left, #1A284B, #233D80);
-    color: white;
+    margin: 20px;
+    transition: all 0.5s;
 }
 
-nav.open .nav-content .toggle-btn{
-    transform: rotate(135deg);
+.social i:hover{
+   transform: translateY(-10px) scale(1.2);
 }
 
-nav.open .nav-content span{
-    transition: all 1s;
-    transform: rotate(calc(var(--i) * (360deg/8))) translateY(100px);
+.social i:nth-child(1):hover,
+.social i:nth-child(7):hover{
+    color: rgb(255, 255, 255);   
 }
 
-.nav-content span{
-    transition: all 1s;
-    position: absolute;
+.social i:nth-child(2):hover{
+    color: rgb(25, 99, 209);
 }
 
-.nav-content span a{
+.social i:nth-child(3):hover{
+    color: rgb(42, 127, 255); 
+    animation: colorChange 5s linear infinite;  
+}
+
+.social i:nth-child(4):hover{
+    animation: tiktok 1s alternate infinite;  
+}
+
+.social i:nth-child(5):hover{
+    color: #7289da;  
+}
+
+.social i:nth-child(6):hover{
+    color: #c4302b;  
+}
+
+.pie img{
+    margin: 50px 20px 30px 20px;
+    filter: drop-shadow(-3px 9px 9px rgb(0, 0, 0));
+}
+
+.links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    flex-wrap: wrap;
+    margin: 30px 0;
+    padding: 0;
+}
+
+.links li{
+    margin: 10px;
+    list-style: none;
+    width: 80px; 
+    text-align: center;
+}
+
+.links li a{
     text-decoration: none;
-    transform: rotate(45deg);
+    color: #7d839c;
+    font-weight: 500;
+    font-size: 20px;
 }
 
-.nav-content span a i{
-    color: #1A284B;
-    font-size: 24px;
-    transform: rotate(calc(var(--i) * (360deg/-8)))
+.pie p{
+    color: #b1b6ca;
 }
 
-.nav-content span a img{
-    width: 32px;
-    transform: rotate(calc(var(--i) * (360deg/-8)))
+.pie img{
+    filter: grayscale(120%);
+    transition: all 0.5s;
+    opacity: 50%;
 }
 
-.nav-content span:nth-child(1),
-.nav-content span:nth-child(2),
-.nav-content span:nth-child(3),
-.nav-content span:nth-child(5),
-.nav-content span:nth-child(6){
-    border-radius: 50%;
-    background: #fff;
+.pie img:hover{
+    transform: scale(1.5);
+    opacity: 100%;
+    filter: grayscale(0%) drop-shadow(0px 5px 20px rgb(24, 91, 235));
 }
 
-.nav-content span:nth-child(4){
-    border-radius: 50%;
-    background: linear-gradient(to left, #1A284B, #233D80);
+@keyframes colorChange{
+    0%, 100%{
+        filter: hue-rotate(0deg);
+    }
+    50%{
+        filter: hue-rotate(360deg);
+    }
+}
+
+@keyframes tiktok{
+    0%{
+        color: #ff0050;
+    }
+
+    50%{
+        color: #000000;
+    }
+
+    100%{
+        color: #00f2ea;
+    }
 }
