--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .header{
     z-index: 2;
     background: #EAECEE;
-    width: 100vw;
+    width: 100%;
     font-family: "Glory", serif; 
     display: flex;
     align-items: center;
@@ -22,7 +22,7 @@ body {
 }
 
 .header .data{
-    width: 30vw;
+    width: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,7 +42,7 @@ body {
 
 .header .centro{
     margin-top: 10px;
-    width: 30vw;
+    width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,7 +75,7 @@ body {
 }
 
 .header .busqueda{
-    width: 30vw;
+    width: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -122,7 +122,7 @@ nav .nav-content{
     z-index: 101;
     cursor: url('./img/mano.png'), auto;
     transform: rotate(45deg);
-    background: linear-gradient(to left, #1A284B, #233D80);
+    background: #212329;
     color: white;
 }
 
@@ -824,7 +824,7 @@ h2 {
 /*Acerca de*/
 .acerca{
     text-align: center;
-    width: 100vw;
+    width: 100%;
     font-family: "Glory", serif; 
     margin-top: 100px;
     display: flex;
@@ -838,20 +838,6 @@ h2 {
     font-size: 40px;
     text-decoration: underline;
     margin: 50px 50px 10px 50px;
-}
-
-.caja{
-    width: 100%;
-    margin-bottom: -3px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-.caja svg{
-    width: 100%;
-    transform: rotate(180deg);
-    filter: drop-shadow(7px -5px 2px rgba(0, 0, 0, 0.404));
-    z-index: -1;
 }
 
 
@@ -1016,19 +1002,6 @@ h2 {
     0 0 10vw rgb(73, 119, 245, 0.4),
     0 0 18vw rgb(73, 119, 245, 0.6),
     0 0 22vw rgb(73, 119, 245, 0.8);
-}
-
-.caja2{
-    width: 100%;
-    margin-top: -3px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-.caja2 svg{
-    width: 100%;
-    filter: drop-shadow(-7px 5px 3px rgba(0, 0, 0, 0.404));
-    z-index: -1;
 }
 
 .multimedia{
@@ -1276,15 +1249,15 @@ h2 {
 @media (max-width: 935px){
     .header .data,
     .header .busqueda{
-        opacity: 0;
+        display: none;
     }
 
     nav{
         z-index: 100;
         position: fixed;
         top: 12%;
-        right: 43%;
-         cursor: url('./img/mano.png'), auto;
+        right: 47%;
+        cursor: url('./img/mano.png'), auto;
         transform: rotate(-45deg);
     }
 
