--- a/css/logics.css
+++ b/css/logics.css
@@ -111,12 +111,40 @@ body {
 
 /*Navbar*/
 #diagramDiv {
-    width: 80%;
+    width: 60%;
     height: 600px;
-    border: 1px solid black;
-  }
-  #controls {
-    margin: 20px 0;
+    background: #ffffff;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.205);
+}
+
+#controls {
+    margin: 10px 0;
+}
+
+#expression{
+    border: none;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.escribe{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Hammersmith one',serif;
+    margin: 10px;
+}
+
+input[type="text"]::placeholder {
+    color: #13193551;
+    font-family: "Hammersmith One", serif;
+}
+
+input[type="text"]:focus {
+    border-color: #0078d7;
+    color: NONE;
+    outline: none;
   }
 /*Bienvenida*/
 
@@ -143,6 +171,16 @@ body {
     font-weight: 200;
     text-align: center;
     color: #7d839c;
+}
+
+/*LogicS*/
+
+.logics{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 
